--- a/src/Mapbender/ManagerBundle/Resources/views/Application/new.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/new.html.twig
@@ -30,6 +30,9 @@
       </div>
     </div>
 
+    <div class="clearContainer"></div>
+    
+
     <div class="right">
       <input type="submit" value="{{ 'Create' | trans }}" class="button"/>
       <a href="{{ url('mapbender_manager_application_index') }}" class="button critical">{{ 'Cancel' | trans}}</a>
