--- a/src/Mapbender/ManagerBundle/Resources/views/Element/yaml-form.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Element/yaml-form.html.twig
@@ -1,5 +1,5 @@
 {{ form_row(form.configuration) }}
-<p class="help">{% trans with {'%locale%': app.request.locale} %}
+<p>{% trans with {'%locale%': app.request.locale} %}
 Use the <a href="http://www.wikipedia.org/search-redirect.php?search=yaml&language=%locale%">YAML</a> format to describe the element's configuration.
 {% endtrans %}</p>
 
