--- a/src/Mapbender/ManagerBundle/Resources/views/Application/index.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/index.html.twig
@@ -11,7 +11,7 @@
 {% block manager_content %}
 
 {% if applications | length > 0 %}
-  <label for="inputFilterApplications" class="labelInput left">Filter:</label><input id="inputFilterApplications" type="text" class="input listFilterInput">
+  <label for="inputFilterApplications" class="labelInput left">{{"Filter"|trans}}:</label><input id="inputFilterApplications" type="text" class="input listFilterInput">
   {% include "MapbenderManagerBundle:Application:actions.html.twig" %}
 
   <ul id="listFilterApplications" class="listFilterContainer clear listFilterBoxes listFilterApplicationBoxes">
