--- a/src/Mapbender/ManagerBundle/Resources/views/Application/new.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/new.html.twig
@@ -2,12 +2,12 @@
 
 {% block title %}{{ "New Application" | trans}}{% endblock %}
 
-{% block manager_js %}
-<script type="application/javascript" src="{{ asset('bundles/fomuser/js/acl-form.js') }}"></script>
-<script type="application/javascript" src="{{ asset('bundles/mopabootstrap/js/mopabootstrap-collection.js') }}"></script>
-<script type="text/javascript" src="{{ asset('bundles/mapbendermanager/codemirror2/lib/codemirror.js') }}"></script>
-<script type="text/javascript" src="{{ asset('bundles/mapbendermanager/codemirror2/mode/yaml/yaml.js') }}"></script>
-<script type="text/javascript" src="{{ asset('bundles/mapbendermanager/js/form.js') }}"></script>
+{% block js %}
+  {{parent()}}
+  <script type="application/javascript" src="{{ asset('bundles/fomuser/js/acl-form.js') }}"></script>
+  <script type="text/javascript" src="{{ asset('bundles/mapbendermanager/codemirror2/lib/codemirror.js') }}"></script>
+  <script type="text/javascript" src="{{ asset('bundles/mapbendermanager/codemirror2/mode/yaml/yaml.js') }}"></script>
+  <script type="text/javascript" src="{{ asset('bundles/mapbendermanager/js/application.js') }}"></script>
 {% endblock %}
 
 {% block manager_content %}
@@ -31,7 +31,6 @@
     </div>
 
     <div class="clearContainer"></div>
-    
 
     <div class="right">
       <input type="submit" value="{{ 'Create' | trans }}" class="button"/>
