--- a/src/Mapbender/ManagerBundle/Resources/views/Element/select.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Element/select.html.twig
@@ -1,14 +1,7 @@
-{% extends "FOMManagerBundle::manager.html.twig" %}
-
-{% block title %}{{ "Select Element Class" | trans}}{% endblock %}
-
-{% block manager_content %}
-
 {% for class, meta in elements %}
-<div data-tags="{{ meta.tags | join(',') | lower }}">
-    <a href="{{ path('mapbender_manager_element_new', {'slug': app.request.get('slug'), 'class': class, 'region': region}) }}">{{ meta.title }}</a>
-    <div>{{ meta.description | trans }}</div>
+<div class="elementContainer" data-tags="{{ meta.tags | join(',') | lower }}">
+    <a class="linkButton" href="{{ path('mapbender_manager_element_new', {'slug': app.request.get('slug'), 'class': class, 'region': region}) }}">{{ meta.title }}</a>
+    <span class="description">{{ meta.description | trans }}</span>
+    <div class="clearContainer"></div>
 </div>
 {% endfor %}
-
-{% endblock %}
