--- a/src/Mapbender/ManagerBundle/Resources/views/Application/edit.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/edit.html.twig
@@ -5,13 +5,12 @@
 {% block js %}
   {{parent()}}
   <script type="text/javascript" src="{{ asset('bundles/fomuser/js/acl-form.js') }}"></script>
-  <script type="text/javascript" src="{{ asset('bundles/mapbendermanager/js/edit.js') }}"></script>
-  <script type="text/javascript" src="{{ asset('bundles/mapbendermanager/js/application.js') }}"></script>
+  <script type="text/javascript" src="{{ asset('bundles/mapbendermanager/js/application-edit.js') }}"></script>
 {% endblock %}
 
 {% block manager_content %}
   <form action="{{ path('mapbender_manager_application_update', { 'slug': application.slug }) }}" method="post" name="{{ form_name }}" {{ form_enctype(form)}}  novalidate="novalidate">
-    <div id="applicationTabContainer" class="tabContainer newApplicationTabContainer">
+    <div id="applicationTabContainer" class="tabContainer applicationTabContainer">
       <ul class="tabs">
         <li id="tabBaseData" class="tab active">{{"Base data" | trans }}</li>
         <li id="tabLayout" class="tab">{{"Layout" | trans }}</li>
@@ -21,7 +20,7 @@
       <div id="containerBaseData" class="container active containerBaseData">
         {% include 'MapbenderManagerBundle:Application:form-basic.html.twig' %}
       </div>
-      <div id="containerLayout" class="container">
+      <div id="containerLayout" class="container containerLayout">
         {% include 'MapbenderManagerBundle:Application:form-elements.html.twig' %}
       </div>
       <div id="containerLayers" class="container">
