--- a/src/Mapbender/ManagerBundle/Resources/views/Application/form-security.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/form-security.html.twig
@@ -1,4 +1,4 @@
 <a id="addPermission" href="#" class="addIcon right" title="{{'Add new user'|trans}}"></a>
-{{ form_widget(form.published, { 'attr': {'class': 'left'}}) }}{{ form_label(form.published) }}
+{{ form_widget(form.published) }}<label for="{{form.published.vars.id}}" class="labelCheck">{{form.published.vars.label}}</label>
 <div class="clearContainer"></div>
 {{ form_widget(form.acl) }}
