--- a/src/Mapbender/ManagerBundle/Resources/views/Application/form-basic.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/form-basic.html.twig
@@ -1,10 +1,10 @@
-{{ form_label(form.title, "Title:" | trans) }}
+{{ form_label(form.title) }}
 {{ form_widget(form.title) }}
 <div class="clearContainer"></div>
 
-{{ form_label(form.slug, "Url title:" | trans) }}
+{{ form_label(form.slug) }}
 {{ form_widget(form.slug) }}<br>
 <div class="clearContainer"></div>
 
-{{ form_label(form.description, "Description:" | trans) }}
+{{ form_label(form.description) }}
 {{ form_widget(form.description) }}
