--- a/src/Mapbender/CoreBundle/Resources/views/Element/coordinatesdisplay.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/coordinatesdisplay.html.twig
@@ -1,6 +1,6 @@
 <div id="{{ id }}" class="mb-element mb-element-coordsdisplay">
 {% if configuration.label == true %}
-    <label>{{ title| trans }} :</label>
+    <label>{{ title| trans }}</label>
 {% endif %}
     <div id="coordinatesdisplay"></div>
 </div>
