--- a/src/Mapbender/ManagerBundle/Resources/views/Element/edit.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Element/edit.html.twig
@@ -1,38 +1,20 @@
-{% set form_errors = form_errors(form) %}
-
-{# Always use mapbender 3 form theming #}
-{% if form is defined %}
-  {% form_theme form 'FOMCoreBundle:Form:fields.html.twig' %}
-{% endif %}
-
 {% block manager_content %}
 
-{% if app.request.get('id') %}
-<form id="elementForm" action="{{ path('mapbender_manager_element_update', { 'slug': app.request.get('slug'), 'id': app.request.get('id') }) }}" method="post" {{ form_enctype(form)}} class="well">
-{% else %}
-<form id="elementForm" action="{{ path('mapbender_manager_element_create', { 'slug': app.request.get('slug') }) }}" method="post" {{ form_enctype(form)}} class="well">
-{% endif %}
-    {% if form_errors(form) %}
-    <div class="alert alert-error">
-        {{ form_errors(form) }}
-    </div>
-    {% endif %}
+  {% if app.request.get('id') %}
+  <form id="elementForm" action="{{ path('mapbender_manager_element_update', { 'slug': app.request.get('slug'), 'id': app.request.get('id') }) }}" method="post" {{ form_enctype(form)}} novalidate="novalidate">
+  {% else %}
+  <form id="elementForm" action="{{ path('mapbender_manager_element_create', { 'slug': app.request.get('slug') }) }}" method="post" {{ form_enctype(form)}} novalidate="novalidate">
+  {% endif %}
 
     {{ form_row(form._token) }}
     {{ form_row(form.class) }}
     {{ form_row(form.region) }}
 
-    {{ form_row(form.title) }}
-    {% if form.targets is defined %}
-    {{ form_row(form.targets) }}
-    {% endif %}
-    <hr/>
-
     {% if theme is defined and theme != '' %}
-        {% include(theme) %}
+      {% include(theme) %}
     {% else %}
-        {{ form_rest(form) }}
+      {{ form_rest(form) }}
     {% endif %}
-</form>
 
+  </form>
 {% endblock %}
