--- a/src/Mapbender/ManagerBundle/Resources/views/Element/select.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Element/select.html.twig
@@ -1,8 +1,8 @@
 {% for class, meta in elements %}
-<div class="elementContainer" data-tags="{{ meta.tags | join(',') | lower }}">
-    <a class="subTitle chooseElement" title="Choose {{meta.title}} Element" href="{{ path('mapbender_manager_element_new', {'slug': app.request.get('slug'), 'class': class, 'region': region}) }}">{{ meta.title }}</a>
-    <a class="checkedIcon chooseElement" title="Choose {{meta.title}} Element" href="{{ path('mapbender_manager_element_new', {'slug': app.request.get('slug'), 'class': class, 'region': region}) }}"></a>
+<a class="checkContainer chooseElement" data-tags="{{ meta.tags | join(',') | lower }}" title="Choose {{meta.title}} Element" href="{{ path('mapbender_manager_element_new', {'slug': app.request.get('slug'), 'class': class, 'region': region}) }}">
+    <span class="subTitle">{{ meta.title | trans }}</span>
+    <span class="checkedIcon"></span>
     <div class="description">{{ meta.description | trans }}</div>
     <div class="clearContainer"></div>
-</div>
+</a>
 {% endfor %}
