--- a/src/Mapbender/WmsBundle/Resources/views/Repository/instance.html.twig
+++ b/src/Mapbender/WmsBundle/Resources/views/Repository/instance.html.twig
@@ -15,7 +15,7 @@
 {% block manager_content %}
 <div class="well">
 <h3>{{ 'Wms Instance' | trans }}: {{ form.vars.value.title }}: {{ instance.source.id }}</h3>
-<p><b>{{ 'origin URL' | trans }}:</b> {{ instance.source.originUrl }}</p>
+<p><b>{{ 'origin URL' | trans }}:</b> <a href="{{ instance.source.originUrl }}" target="_BLANK">{{ instance.source.originUrl }}</a></p>
 {% set root = instance.source.getRootlayer() %}
 {{ form_errors(form) }}
     <form action="{{path('mapbender_wms_repository_instance',{"slug": slug,"instanceId": instance.id})}}" method="post">
@@ -26,32 +26,24 @@
                     <td class="colselect">{{ form_widget(form.format) }}</td>
                     <td class="coltitle">{{ form_label(form.visible) }}:</td>
                     <td class="colinputcheckbox">{{ form_widget(form.visible) }}</td>
-                    <td class="coltitle">{{ form_label(form.baselayer) }}:</td>
-                    <td class="colinputcheckbox">{{ form_widget(form.baselayer) }}</td>
                 </tr>
                 <tr>
                     <td class="coltitle">{{ form_label(form.infoformat) }}:</td>
                     <td class="colselect">{{ form_widget(form.infoformat) }}</td>
                     <td class="coltitle">{{ form_label(form.proxy) }}:</td>
                     <td class="colinputcheckbox">{{ form_widget(form.proxy) }}</td>
-                    <td class="coltitle">&nbsp;</td>
-                    <td class="colinputcheckbox">&nbsp;</td>
                 </tr>
                 <tr>
                     <td class="coltitle">{{ form_label(form.exceptionformat) }}:</td>
                     <td class="colselect">{{ form_widget(form.exceptionformat) }}</td>
                     <td class="coltitle">{{ form_label(form.transparency) }}:</td>
                     <td class="colinputcheckbox">{{ form_widget(form.transparency) }}</td>
-                    <td class="coltitle">&nbsp;</td>
-                    <td class="colinputcheckbox">&nbsp;</td>
                 </tr>
                 <tr>
                     <td class="coltitle">{{ form_label(form.opacity) }}:</td>
                     <td class="colselect">{{ form_widget(form.opacity) }}</td>
                     <td class="coltitle">{{ form_label(form.tiled) }}:</td>
                     <td class="colinputcheckbox">{{ form_widget(form.tiled) }}</td>
-                    <td class="coltitle">&nbsp;</td>
-                    <td class="colinputcheckbox">&nbsp;</td>
                 </tr>
             </table>
         </div>
